--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -26,8 +26,6 @@ services:
     _instanceof:
         Doctrine\Common\EventSubscriber:
             tags: ['doctrine.event_subscriber']
-        Arthem\Bundle\RabbitBundle\Consumer\Event\EventMessageHandlerInterface:
-            tags: ['arthem_rabbit.event_handler']
         Symfony\Component\EventDispatcher\EventSubscriberInterface:
             tags: ['kernel.event_subscriber']
         App\Download\DownloadAdapterInterface:
@@ -55,7 +53,7 @@ services:
 
     GuzzleHttp\ClientInterface: '@GuzzleHttp\Client'
 
-    App\Api\DataTransformer\ArchiveInputDataTransformer:
+    App\Api\Processor\ArchiveProcessor:
         arguments:
             $maxExpirationTime: '%env(int:MAX_EXPIRATION_TIME)%'
 
