--- a/api/docker/supervisor/event.ini
+++ b/api/docker/supervisor/event.ini
@@ -1,6 +1,6 @@
 [program:event]
 directory=/srv/app
-command=/bin/sh -c '/srv/app/bin/console rabbitmq:consumer -vvv --messages=100 event || (sleep 10s && false)'
+command=/bin/sh -c '/srv/app/bin/console  messenger:consume async -vvv --limit=100 --time-limit=3600 --no-reset'
 autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
