--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,6 +2,9 @@ name: Build images, test, and then push
 
 on: push
 
+env:
+  DOCKER_TAG: ${{ github.sha }}
+
 jobs:
   build_publish:
     name: 'Build'
@@ -25,16 +28,31 @@ jobs:
           helm lint infra/helm/zippy
 
       - name: Login to Docker Hub
-        if: github.ref == 'refs/heads/main'
-        uses: docker/login-action@v1
+        if: env.DOCKERHUB_USERNAME != null && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push images
-        if: github.ref == 'refs/heads/main'
+        if: env.DOCKERHUB_USERNAME != null && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
         run: |
-          docker compose push
+          docker image ls | grep ${{ env.DOCKER_TAG }} | awk '{ print $1 }' | xargs -I {} echo docker tag {}:${{ env.DOCKER_TAG }} {}:${{ github.ref_name }} | bash
+          REGISTRY_NAMESPACE=alchemyfr/ps- DOCKER_TAG=${{ github.ref_name }} docker compose push
+
+      - name: Push latest
+        if: env.DOCKERHUB_USERNAME != null && startsWith(github.ref, 'refs/tags/')
+        run: |
+          LATEST_TAG=$(curl \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ github.token }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{ github.repository }}/releases/latest | jq --raw-output '.tag_name')
+
+          if [ "${LATEST_TAG}" == "${{ github.ref_name }}" ]; then
+            docker image ls | grep ${{ env.DOCKER_TAG }} | awk '{ print $1 }' | xargs -I {} echo docker tag {}:${{ env.DOCKER_TAG }} {}:latest | bash
+            REGISTRY_NAMESPACE=alchemyfr/ps- DOCKER_TAG=latest docker compose push
+          fi
 
       - name: Publish Helm charts
         if: github.ref == 'refs/heads/main'
