--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,20 +28,20 @@ jobs:
           helm lint infra/helm/zippy
 
       - name: Login to Docker Hub
-        if: env.DOCKERHUB_USERNAME != null && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+        if: secrets.DOCKERHUB_USERNAME != null && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push images
-        if: env.DOCKERHUB_USERNAME != null && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+        if: secrets.DOCKERHUB_USERNAME != null && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
         run: |
           docker image ls | grep ${{ env.DOCKER_TAG }} | awk '{ print $1 }' | xargs -I {} echo docker tag {}:${{ env.DOCKER_TAG }} {}:${{ github.ref_name }} | bash
           REGISTRY_NAMESPACE=alchemyfr/ps- DOCKER_TAG=${{ github.ref_name }} docker compose push
 
       - name: Push latest
-        if: env.DOCKERHUB_USERNAME != null && startsWith(github.ref, 'refs/tags/')
+        if: secrets.DOCKERHUB_USERNAME != null && startsWith(github.ref, 'refs/tags/')
         run: |
           LATEST_TAG=$(curl \
             -H "Accept: application/vnd.github+json" \
